# iconer

./: .coveragerc  .gitignore  .pylintrc  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: package.yml  python-package.yml  release.yml
iconer/: attribute.py  command.py  download.py
test/: requirements.txt
