[metadata]
keywords = xarg, icon, favicon
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts =
    iconer = iconer.command:main
